--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -40,6 +40,10 @@ footer {
 /* @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
 /* @media (min-width:1281px) { /* hi-res laptops and desktops */ 
 
-@media screen and (min-width:480px){
+@media screen and (min-width: 801px){
+
+}
+
+@media screen and (min-width:1281px){
 
 }
