--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -7,40 +7,80 @@
   }
 */
 
+body{
+  font-family: 'Titillium Web', sans-serif;
+  color: #666666;
+  text-align: center;
+}
+
+.box{
+  background-color: #fff;
+  width: 500px;
+  margin: 50px auto;
+}
+
+#title {
+  font-size: 30px;
+  margin-top: 25px;
+}
+
+#logo {
+  margin-top: 25px;
+  max-width: 365px;
+  height: auto;
+}
+
+#logo-task {
+  width: 75px;
+}
+
+
+
+
+
+
+
+/*
+.headerlogo{
+  border: 5px dashed #fff;
+  float: left;
+  font-size: 1%;
+}
+
+.headername
+ {
+  font-size: 100%;
+  width: 100%;
+  text-align: center;
+  font-family: 'Montserrat Subrayada', sans-serif;
+
+}
+
+
 footer {
-    background-color: rgb(191, 204, 119);
+  background-color: rgb(191, 204, 119);
 	text-align: center;
 	padding: 40px 0;
 }
+  @media screen and (min-width: 768px){
+
+  }
+  
+  @media screen and (min-width:1281px){
+  
+  }
 
 .copyright{
 	color: #000000;
 	font-size: 15px;
 	margin: 20px 0 0;
-}
-.image-logo {
-  width: 56%;
-  height: 56%;
-  float: left;
-  text-align: center;
-}
-
-.btn-menu {
-  width: 56px;
-  height: 56px;
-  float: right;
-  text-align: center;
-  color: rgb(54, 51, 51);
-
-}
+}*/
 /* ---------- media query --------- */
-/* @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ 
-/* @media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ 
-/* @media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ 
-/* @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ 
-/* @media (min-width:1281px) { /* hi-res laptops and desktops */ 
+/* @media (min-width:480px) { /* smartphones */  
+/* @media (min-width:768px) { /* tablet */ 
+/* @media (min-width:1024px) { /*desktops */ 
 
-@media screen and (min-width: 801px){
+@media screen and (min-width: 768px){
 
 }
 
