--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -6,6 +6,9 @@
     background: #ddd;
   }
 */
+html{
+  width: 100%;
+}
 
 body{
   font-family: 'Titillium Web', sans-serif;
@@ -47,10 +50,22 @@ body{
 
 .headername
  {
-  font-size: 100%;
   width: 100%;
+}
+
+.name {
+  padding-inline: 1%;
+  width: 100%;
+  max-height: 100%;
   text-align: center;
-  font-family: 'Montserrat Subrayada', sans-serif;
+  font-size: 570%;
+  font-family: 'Hurricane', 'cursive';
+}
+  
+.paragrafo {
+  padding-inline: 20%;
+  text-align: center;
+  line-height: 1.6;
 }
 
 .u-body {
@@ -58,7 +73,6 @@ body{
 }
 
 .images {
-  
   width: 100%;
 }
 
