--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -6,18 +6,6 @@ html * {
   box-sizing: border-box;
 }
 
-body{
-  width: 100%;
-  font-family: 'Titillium Web', sans-serif;
-  color: #666666;
-  text-align: center;
-}
-
-.u-body {
-  font-family: 'Open Sans',sans-serif;
-}
-
-
 /** HEADER ************************************/
 .headername{
   width: 100%;
@@ -119,8 +107,8 @@ body{
 
 
 /** MAIN ******************************/
-/* fotos coloridas */
-.container {
+      /* fotos coloridas */
+/*.container {
   background-color: rgb(255, 51, 0);
   border: 15px solid rgb(171, 94, 206);
   padding: 15px;
@@ -131,19 +119,25 @@ body{
   background-color: rgb(9, 255, 0);
   padding: 20px;
   border: 1px solid blue;
-}
+}*/
 
-#item-1 {
 
-}
-#item-2 {
-  
-}
-#item-3 {
-  
-}
-#item-4 {
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+.paragrafo {
+  font-family: 'Titillium Web', sans-serif;
+  color: #666666;
 }
 
 
@@ -171,16 +165,12 @@ body{
 }
 
 
+
 .image-ultima {
   width: 100%;
 }
 
 
-.paragrafo {
-  padding-inline: 20%;
-  text-align: center;
-  line-height: 32px;
-}
 
 
 /** FOOTER ****************/
@@ -192,7 +182,7 @@ footer {
 .copyright{
 	color: #666666;
 	font-size: 15px;
-	margin: 20px 0 0;
+	margin: 68px 0 20px;
 }
 
 
