--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -108,18 +108,26 @@ html * {
 
 /** MAIN ******************************/
       /* fotos coloridas */
-/*.container {
-  background-color: rgb(255, 51, 0);
-  border: 15px solid rgb(171, 94, 206);
-  padding: 15px;
-  display: grid; 
-  grid-template-columns: auto auto auto;
+
+.container {
+  display: flex;
+  padding-bottom: 10%;
+  padding-top: 10%;
 }
-.container div {
-  background-color: rgb(9, 255, 0);
-  padding: 20px;
-  border: 1px solid blue;
-}*/
+
+.container-1 {
+  width: 50%
+}
+.images-first-left {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: 50px;
+}
+
+.container-2 {
+  width: 50%;
+}
 
 
 
