--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -108,11 +108,16 @@ html * {
 
 /** MAIN ******************************/
       /* fotos coloridas */
+.section-images {
+  display: flex;
+  justify-content: space-around;
+}
 
 .container {
   display: flex;
   padding-bottom: 10%;
   padding-top: 10%;
+  width: 60%;
 }
 
 
@@ -141,24 +146,21 @@ html * {
   width: 50%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.paragrafo {
-  font-family: 'Titillium Web', sans-serif;
-  color: #666666;
+.u-text {
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: 2.75rem;
+  margin: 45px 0 0;
 }
+.paragrafo {
+  width: 100%;
+  font-family: 'Josefin Slab', serif;
+  color: #666666;
+  font-size: 16px;
+  margin: 29px 0 0;
+  line-height: 1.6;
+}
+
+
 
 
 
