--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -215,15 +215,187 @@ footer {
 }
 
 
+
 /* ---------- media query --------- */
-/* @media (min-width:480px) { /* smartphones */  
-/* @media (min-width:768px) { /* tablet */ 
-/* @media (min-width:1024px) { /*desktops */ 
+/* @media (min-width:320px) (max-width:480px) { /* smartphones */ 
+/* @media (min-width:481px) (max-width:768px) { /* tablet */ 
+/* @media (min-width:769px) (max-width:1024px) { /*desktops */ 
 
-@media screen and (min-width: 768px){
+  
+@media screen and (max-width:480px){
 
+  body {
+    width: 100%;
+  }
+  /** HEADER ************************************/
+  .headername{ 
+    margin: 50px -40px 30px;
+    padding: 30px;
+  }
+  .name { 
+    font-size: 525%;
+  }
+  .p2 { 
+    padding-top: 34px;
+    font-size: 186%;
+  }
+
+  /*** Menu Button Hamburger ***/
+  #menu-bar { 
+    width: 35px;
+  }
+  .bar { 
+    height: 6px;
+  }
+  .nav ul { 
+    padding: 0 43px;
+  }
+  .nav li { 
+    padding: 14px 9px;
+  }
+  .nav li a { 
+    font-size: 18px;
+  }
+  .menu-bg, #menu { 
+    top: 4px;
+    left: -9px;
+  }
+  .menu-bg { 
+    margin: 65px 0px 20px 0px;
+    background: radial-gradient(circle, #9b5f6af7, #9b5f6a94);
+  }
+  .change-bg { 
+    width: 352px;
+    height: 448px;
+  }
+  
+  
+  /** MAIN ******************************/
+        /* fotos coloridas */
+
+  
+  .container {
+      flex-direction: column;
+      flex-wrap: wrap;
+      width: 100%;
+  }
+  
+  .container-1 {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .images-first-left {
+    flex-direction: column;
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+  }
+  .image4 {
+    margin-right: 0px;
+    border-radius: 40px 10px;
+  }
+  .image3 {
+    margin-top: 29px;
+    border-radius: 15px 50px;
+  }
+  
+  .image5 {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    align-items: center;
+  }
+  .border-image5 {
+    border-radius: 10px;
+  }
+  
+  
+  .container-2 {
+    width: 100%;
+    margin-top: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .size-image8 {
+    max-width: 90%;
+    margin-top: 35px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  
+
+  .u-text {
+    margin: 60px 0 0;
+  }
+  .paragrafo {
+    font-size: 20px;
+    margin: 40px;
+  }
+  
+  
+  
+  
+  
+  
+  /* fotos preto e branco */
+  .grid {
+    display: grid;
+  }
+  .grid-template-columns-3 {
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+  .image {
+    margin-top: 100px;
+    background: rgb(252, 252, 252);
+  }
+  .image-4 {
+    width: 100%;
+  }
+  .image-5 {
+    width: 100%;
+  }
+  .image-6 {
+    width: 100%;
+  }
+  
+  
+  
+  
+  .image1 {
+    display: flex;
+    justify-content: space-around;
+  }
+  .image-ultima {
+    width: 100%;
+    border-radius: 54px;
+  
+  }
+  
+  
+  
+  
+  /** FOOTER ****************/
+  footer {
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 40px 0;
+  }
+  .copyright{
+    color: #666666;
+    font-size: 15px;
+    margin: 68px 0 20px;
+  }
+  
 }
 
-@media screen and (min-width:1281px){
+
+
+
+
+/*@media screen and (min-width:481px) and (max-width:768px){
 
 }
+*/
