--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -6,6 +6,10 @@ html * {
   box-sizing: border-box;
 }
 
+.body-overflow-hidden {
+  overflow: hidden;
+}
+
 /** HEADER ************************************/
 .headername{
   width: 100%;
@@ -29,7 +33,7 @@ html * {
 
 /*** Menu Button Hamburger ***/
 #menu {
-  z-index: 2;
+  z-index: 3;
 }
 #menu-bar {
   width: 45px;
@@ -76,7 +80,7 @@ html * {
   position: absolute;
 }
 .menu-bg {
-  z-index: 1;
+  z-index: 2;
   width: 0;
   height: 0;
   margin: 30px 0 20px 20px;
@@ -105,6 +109,15 @@ html * {
   transform: translate(-60%,-30%);
 }
 
+
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgb(70 68 68 / 40%);
+  z-index: 1;
+}
 
 /** MAIN ******************************/
       /* fotos coloridas */
