finished part mobile responsive web

--- a/mobileFirst.css
+++ b/mobileFirst.css
@@ -242,8 +242,7 @@ footer {
   }
   /** HEADER ************************************/
   .headername{ 
-    margin: 70px 0 14px;
-    padding: 30px;
+    padding: 88px;
   }
   .name { 
     font-size: 525%;
@@ -333,8 +332,13 @@ footer {
     margin-right: 5px;
   }
   
+
+  .description-text {
+    width: 100%;
+    padding: 7%;
+  }
   .u-text {
-    margin: 60px 0 55px;
+    margin: 63px 10px 60px;
   }
   .paragrafo {
     font-size: 18px;
@@ -388,7 +392,7 @@ footer {
 
 /*************************************************************************************************************************/
 
-@media screen and (max-width:768px){
+@media screen and (min-width: 481px) and (max-width:768px){
 
   /** HEADER ************************************/
   .headername{ 
@@ -408,113 +412,95 @@ footer {
   .menu-bg, #menu { 
     top: 24px;
     left: 15px;
+    
   }
   .menu-bg { 
     margin: 87px 0px 20px 6px;
+    background: radial-gradient(circle, #9b5f6af7, #9b5f6a94);
   }
   
   /** MAIN ******************************/
         /* fotos coloridas */
   .container {
-      flex-direction: column;
-      flex-wrap: wrap;
-      width: 100%;
-  }
-  .container-1 {
+    padding: 5%;
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
+  }
+  .container-1 {
+    width: 100%;
     margin-right: 0px;
   }
-  .images-first-left {
-    flex-direction: column;
-    flex-wrap: wrap;
+  .images-first-left { 
     display: flex;
     align-items: center;
     margin-top: 0px;
+    justify-content: center;
+    width: 100%;
   }
-  .image4 {
-    margin-right: 0px;
-    border-radius: 40px 10px;
+  .image3 { 
+    padding: 5%;
+    width: 100%;
+    margin-top: 0px;
   }
-  .image3 {
-    margin-top: 29px;
-    border-radius: 15px 50px;
+  .image-4{
+    padding: 5%;
+    width: 100%;
   }
 
-  .image5 {
+  .image5 { 
     display: flex;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 100px;
     align-items: center;
-  }
-  .border-image5 {
-    border-radius: 10px;
   }
   
   .container-2 {
     width: 100%;
-    margin-top: 60px;
+    margin-top: 53px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
   }
   .size-image8 {
-    max-width: 90%;
-    margin-top: 35px;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-  
-  .u-text {
-    margin: 60px 0 55px;
-  }
-  .paragrafo {
-    font-size: 18px;
-    margin: 0px;
-  }
-  /* fotos preto e branco */
-  .grid {
-    display: grid;
-    justify-content: center;
-  }
-  .grid-template-columns-3 {
-    grid-template-columns: none;
-  }
-  .image {
-    margin-top: 0px;
-  }
-  .image-4 {
-    padding: 5%;
     width: 100%;
-  }
-  .image-5 {
-    width: 100%;
-    padding: 5%;
-  }
-  .image-6 {
-    padding: 5%;
-    width: 100%;
-  }
-  
-  .image1 {
-    display: flex;
-    justify-content: space-around;
-  }
-  .image-ultima {
-    width: 100%;
-    border-radius: 54px;
-    padding: 3%;
-  }
-  /** FOOTER ****************/
-  footer {
-    width: 100%;
-    padding: 30px 0;
-  }
-  .copyright{
-    font-size: 13px;
+    margin-top: 15px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
   
 
+  .description-text {
+    width: 100%;
+    padding: 7%;
+  }
+  .u-text {
+    margin: 63px 10px 60px;
+  }
+  .paragrafo {
+    font-size: 19px;
+    margin: 0px;
+  }
+  /* fotos preto e branco */
+  .grid { 
+    display: grid;
+    justify-content: center;
+    padding: 15%;
+  }
+  .grid-template-columns-3 { 
+    grid-template-columns: none;
+  }
+  
+  .image1 { 
+    padding: 4%;
+  }
+  .image-ultima { 
+    width: 100%;
+    border-radius: 54px;
+  }
+  /** FOOTER ****************/
+  .copyright{ 
+    font-size: 15px;
+  }
 }
